# model-risk-copilot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  render.yaml  run_assessment.py
agents/: compliance_checker.py  document_analyser.py  question_generator.py  report_drafter.py
core/: models.py  pipeline.py  sr117_framework.py
data/: sample_mdds.py
docs/: PRD.md
