[project]
name = "model-risk-copilot"
version = "1.0.0"
description = "Multi-agent AI model risk management platform — SR 11-7 / SS1/23 compliance assessment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "streamlit>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]

[project.urls]
Repository = "https://github.com/basavarajshepur-lab/model-risk-copilot"
